# i4-scout

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 001_baseline_existing_schema.py  002_add_listing_lifecycle_fields.py  003_add_scrape_job_listings.py
config/: options.example.yaml
docker/: Dockerfile  docker-compose.yml
docs/: ARCHITECTURE.md  api-filtering-implementation-plan.md  architecture-review-web-interface.md  bmw_i4_search_config.yaml  cli-simplification-implementation.md  code-review-fixes-implementation.md  dashboard-redesign-plan.md  fix-delisting-bug-plan.md  implementation-plan.md  options-config.md  phase3-4-implementation-plan.md  sqlite-retry-logic-implementation-plan.md  ux-ui-improvements-implementation.md  web-application-review.md  web-frontend-implementation-plan.md  web-interface-implementation-context.md  web-interface-implementation-plan.md
poc/: poc_autoscout24_de.py  poc_autoscout24_nl.py  poc_mobile_de.py  poc_mobile_de_nodriver.py  run_all_poc.py
poc/results/: POC_SUMMARY.md
scripts/: migrate_add_color_fields.py
src/car_scraper/: __init__.py  cli.py  config.py
src/i4_scout/: __init__.py  cli.py  config.py
tests/: __init__.py
tests/fixtures/: autoscout24_de_detail.html  autoscout24_de_search.html  autoscout24_nl_detail.html  autoscout24_nl_search.html
tests/integration/: test_api_config.py  test_api_export.py  test_api_listings.py  test_api_scrape.py  test_api_stats.py  test_browser.py  test_cli.py  test_dashboard_partials.py  test_issue_api.py  test_notes_api.py  test_recalculate_scores.py  test_repository.py  test_web_routes.py
tests/unit/: test_autoscout24_parsing.py  test_autoscout24_photo_parsing.py  test_base_scraper.py  test_bundle_expander.py  test_config.py  test_database.py  test_engine.py  test_job_service.py  test_listing_repository_issue.py  test_listing_service.py  test_listing_status.py  test_normalizer.py  test_note_repository.py  (+12 more)
(+101 files in other folders)
